fix dropdown not displaying on small screens

--- a/src/components/Header/FavoriteDropdown/FavoriteDropdown.css
+++ b/src/components/Header/FavoriteDropdown/FavoriteDropdown.css
@@ -33,3 +33,9 @@
 .favorite-dropdown.displayed {
   display: block;
 }
+
+@media (max-width: 735px) {
+  .favorite-dropdown-container .favorite-dropdown {
+    bottom: 45px;
+  }
+}
